# jacksjohns

./: .env.example  .gitignore  README.md  build.sh  docker-compose.yml
.github/workflows/: deploy.yml
agent-service/: Dockerfile  pyproject.toml  requirements.txt
agent-service/src/: main.py
agent-service/src/api/: dependencies.py
agent-service/src/api/routes/: __init__.py  chat.py  health.py  image.py  persona.py  settings.py  video.py
agent-service/src/config/: image_generation.yaml  settings.py
agent-service/src/domain/entities/: __init__.py  generation_settings.py  persona.py
agent-service/src/domain/interfaces/: __init__.py  image_generator.py  memory_service.py  persona_repository.py  session_service.py  settings_repository.py  video_generator.py
agent-service/src/infrastructure/: __init__.py
agent-service/src/infrastructure/agent_engine/: __init__.py  agent_engine_manager.py  vertex_ai_memory_service.py  vertex_ai_session_service.py
agent-service/src/infrastructure/genai/: __init__.py  gemini_image_generator.py  veo_video_generator.py
agent-service/src/infrastructure/repositories/: __init__.py  channel_session_repository.py  firestore_persona_repository.py  firestore_settings_repository.py  in_memory_persona_repository.py
discord-bot/: Dockerfile  package.json
discord-bot/src/: index.ts
discord-bot/src/commands/: chat.ts  dream.ts  forget.ts  imagine.ts  index.ts  (+3 more)
terraform/: agent_engine.tf  artifact_registry.tf  cloud_run.tf  firestore.tf  gcs.tf  github_actions.tf  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+9 files in other folders)
